[package]
name = "trezor-client"
version = "0.0.2"
authors = ["joshie", "romanz", "Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/joshieDo/rust-trezor-api"
repository = "https://github.com/joshieDo/rust-trezor-api"
description = "Client library for interfacing with Trezor hardware wallet devices."
keywords = ["ethereum", "bitcoin", "trezor", "wallet"]
readme = "README.md"

[dependencies]
log = "0.4.5"
hex = "0.3.2"
unicode-normalization = "0.1.7"
primitive-types = "0.10.1"
bitcoin = "0.18.0"
bitcoin_hashes = "0.3"
bitcoin-bech32 = "0.9.0"
secp256k1 = "0.12.0"
protobuf = "2.0"
byteorder = "1.2"
hidapi = { version = "1.3.0", features = [
    "linux-static-hidraw",
], default-features = false }
rusb = "0.8"

[dev-dependencies]
fern = "0.5.6"
