[package]
name = "trezor-client"
version = "0.0.3"
authors = ["joshie", "romanz", "Steven Roose <steven@stevenroose.org>"]
license = "CC0-1.0"
homepage = "https://github.com/joshieDo/rust-trezor-api"
repository = "https://github.com/joshieDo/rust-trezor-api"
description = "Client library for interfacing with Trezor hardware wallet devices."
keywords = ["ethereum", "bitcoin", "trezor", "wallet"]
readme = "README.md"

[dependencies]
log = "0.4.5"
hex = { version = "0.4.3", default-features = false, features = ["std"] }

# bitcoin
unicode-normalization = { version = "0.1.7", optional = true }
bitcoin = { version = "0.18.0", optional = true }
bitcoin_hashes = { version = "0.3", optional = true }
bitcoin-bech32 = { version = "0.9.0", optional = true }
secp256k1 = { version = "0.12.0", optional = true }

# ethereum
primitive-types = { version = "0.10.1", optional = true }

protobuf = "2.0"
byteorder = "1.2"
hidapi = { version = "1.3.0", features = [
    "linux-static-hidraw",
], default-features = false }
rusb = "0.8"

[dev-dependencies]
fern = "0.5.6"

[features]
default = ["f_bitcoin", "f_ethereum"]
f_bitcoin = [
    "bitcoin",
    "secp256k1",
    "unicode-normalization",
    "bitcoin-bech32",
    "bitcoin_hashes",
]
f_ethereum = ["primitive-types"]
